Comentário nos Códigos

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,6 +8,7 @@
     <title>Integraçao</title>
 </head>
 <body>
+    <!-- Formulário onde esrá inserido todas as coordenadas indicadas para o Robô -->
     <form action="/criar" method="post">
         <h1 class="titulo">Coordenadas</h1>
         
@@ -25,6 +26,7 @@
         <button type="submit">Enviar Coordenadas</button>
     </form>
     <br>
+    <!-- Tabela onde será exibido todas as coordenadas inseridas, puxadas diretamento do banco de Dados -->
     <div class="tabela">
         <table>
             <thead>
